Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8255968/T8255968_10.out
T8255968_10.java:9:41: compiler.err.prob.found.req: (compiler.misc.invalid.mref: kindname.constructor, (compiler.misc.report.access: T8255968_10_Test(int), private, T8255968_10_Test))
1 error
